// Auto generated 

syntax = "proto3";
package packageName;

// [START java_declaration]
option java_package = "com.DAProtobuf.DAProtobuf";
option java_outer_classname = "UIWindow_Config";
// [END java_declaration]

// [START csharp_declaration]
option csharp_namespace = "DAProto"; 
// [END csharp_declaration]

message UIWindow_Config
{
    int32 id = 1;
    string windowName = 2;
    string prefabPath = 3;
}

message Excel_UIWindow_Config
{
    map<int32,UIWindow_Config> Data = 1;
}